# TAG

./: .env.example  .gitignore  README.md  alembic.ini  invention_description_pulse.docx  invention_description_pulsewriter.docx  invention_description_tag.docx  pyproject.toml  shopify.app.tag-inventory.toml  shopify.app.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 0001_initial.py  088eed0fdb2a_phase_3_sale_sale_line_conflict.py  6a97164e3d36_product_add_has_image_number_drop_image_.py  777e5d80309e_phase_2_outbound_change_queue.py  7c5734b9c212_add_product_marketplace_product_id.py  8c0a4869183b_add_inventory_unit_reserve_quantity.py  a3f1c2d4e5b6_add_inventory_adjustment.py  b5e2f1a3c4d7_conflict_add_resolved_fields.py  c7d8e9f0a1b2_add_sold_online_flag.py  ed607dbc4a97_phase_1_products_inventory_unit_channel_.py  f49aff4cd3a3_phase_4_app_setting_kv_table.py
app/: alerts.py  backup.py  config.py  diagnostics.py  health.py  logging_setup.py  main.py  maintenance.py  paths.py  scheduler.py  settings_store.py  tls.py  updater.py
app/db/: base.py  session.py
app/inbound_email/: __init__.py  flagger.py  receiver.py
claude_documents/: data-flow-demo.html  plan_2026-05-01-tcgplayer-sync-scheduler.md  plan_phase_0_skeleton.md  plan_phase_1_tcgplayer_ingestion.md  plan_phase_2_outbound_mock.md  plan_phase_6_binary_packaging.md  plan_phase_6b_reliability_and_operations.md  review_security_and_fragility.md  test_accounts_setup.md  we-are-going-to-jazzy-river.md
claude_skills/: skill_brainstorming.md  skill_executing_plans.md  skill_receiving_code_review.md  skill_requesting_code_review.md  skill_systematic_debugging.md  skill_test_driven_development.md  skill_writing_plans.md
mail examples/: Your TCGplayer.com items of Blue-Eyes Twin Burst Dragon and 1 more items have sold!.eml  Your TCGplayer.com items of Left Leg of the Forbidden One have sold!.eml  Your TCGplayer.com items of Mamoswine ex - 174_159 have sold!.eml  Your TCGplayer.com items of Slifer the Sky Dragon and 2 more items have sold!.eml
test_data/: .gitignore  README.md  tcgplayer_fixture.csv  tcgplayer_fixture_v2.csv
tests/: conftest.py  test_admin_outbound_routes.py  test_admin_routes.py  test_admin_sales_routes.py  test_admin_sync_routes.py  test_alerts.py  test_auth_health.py  test_backup.py  test_db_hardening.py  test_demo_seed.py  test_diagnostics.py  test_dpapi.py  test_ebay_inbound.py  test_ebay_outbound.py  test_health.py  test_image_paths.py  test_inbound_email_flagger.py  test_inventory_routes.py  test_marketplace_search.py  test_origin_guard.py  test_outbound_enqueue.py  test_portal_auth.py  test_portal_cookie_persistence.py  test_portal_downloader.py  test_pos_cart.py  test_pos_routes.py  test_pos_totals.py  test_product_images.py  test_review_fixes.py  test_sale_recorder.py  test_scheduler.py  test_settings_store.py  test_settings_store_secret.py  test_shopify_outbound.py  test_smoke.py  test_sold_online_routes.py  test_supplies_routes.py  test_tcgplayer_diff.py  test_tcgplayer_email_parser.py  test_tcgplayer_ingest.py  (+4 more)
tools/: _repro_portal.py  _watch_receiver.py  backfill_all_images.py  backfill_product_number.py  check_imap.py  demo_dark_flareon.py  demo_image_fetch.py  diagnose_marketplace_search.py  diagnose_profile_cookies.py  diagnose_zero_qty_bug.py  import_csv_one_shot.py  inspect_cookies_full.py  inspect_number_column.py  pick_failing_product.py  probe_post_import.py  show_image_fetch_request.py  soak.py  wipe_all_data.py  wipe_demo_data.py
(+76 files in other folders)
