[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tag-inventory"
version = "0.1.0"
description = "Multi-channel inventory system for a card shop (TCGPlayer + eBay + Shopify POS)"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{ name = "TAG Inventory" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.27,<0.40",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27,<0.29",
    "apscheduler>=3.10,<4.0",
    # Browser automation for the manual "Get from TCGPlayer Portal"
    # button. Selenium 4.6+ ships with Selenium Manager that auto-
    # downloads matching chromedriver / msedgedriver binaries.
    # undetected-chromedriver layers a patched chromedriver on top to
    # defeat the standard automation fingerprints Cloudflare gates
    # on; only works with Chrome (it explicitly rejects Edge's
    # version string), so the driver builder branches: UC for Chrome,
    # plain Selenium for Edge.
    "selenium>=4.20,<5.0",
    "undetected-chromedriver>=3.5,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.30",
]

[project.scripts]
tag-inventory = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
